# cemm

./: .gitignore  ACCEPTANCE_CONTRACT.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  CEMM_CORE_MATHS.md  CEMM_GAP_ANALYSIS.md  CEMM_IMPLEMENTATION_PLAN.md  CORE_ISSUES.md  CORE_LOOP.md  DOCUMENTATION_MIGRATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  ISSUES_TO_AVOID.md  PHASES13_14_IMPLEMENTATION_REPORT.md  PRE_3_5_1_STABILIZATION_PLAN.md  README.md  README_BUNDLE.md  RUNTIME_PLAN.md  V3_5_1_IMPLEMENTATION_PLAN.md  apply_phase17_18.py  apply_phases13_14.py  cemm_runtime.sqlite3  cemm_trainer.py  cemm_training_architecture.md  cemm_training_examples.jsonl  coreloop.md  manual_integration_test.py  observed-3.3-violations.md  phased-fixes.md  pyproject.toml  test_nvidia_models.py  web_demo.py
cemm/: AGENTS.md  ARCHITECTURE.md  GOVERNANCE-MIGRATION.md  README.md  __init__.py  __main__.py  architecture.md  cemm_acceptance_tests.md  cemm_architecture_gap_trace.md  cemm_foundational_fixes.md  cemm_implementation_plan.md  cemm_original_work_subplans.md  cemm_pipeline.md  cemm_runtime.sqlite3  cemm_runtime_router.py  cemm_seed_generator.py  cemm_seed_spec.json  cemm_trainer.py  cemm_training.sqlite3  cemm_training_architecture (2).md  cemm_training_architecture.md  cemm_training_examples.jsonl  cemm_v3_1_operational_meaning_spine.md  demo_runtime.sqlite3  diagnosis.md  gaps.md  old_architecture.md  self_knowledge.json  synthesis_verifier.py  web_demo.py
cemm_minimal_brain_mvp/: ARCHITECTURE_AUDIT.md  MANIFEST.json  MVP_ARCHITECTURE.md  README.md  cemm_mvp.py  demo_transcript.txt  test_output.txt
docs/: acceptance_matrix.json  milestones.md  observed-gaps.md  plan.md
scripts/: poc_causal_train.py  poc_train.py
tests/: test_acceptance.py  test_action.py  (+26 more)
(+1573 files in other folders)
