[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cemm"
version = "0.1.0"
description = "Contextual Event Memory Model — ERCA v2.0 implementation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
]
train = [
    "datasets>=4.0",
]
