[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cemm"
version = "3.4.7"
description = "CEMM grounded multilingual cognitive semantic kernel"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cemm*"]

[tool.setuptools.package-data]
cemm = ["data/v347/*.json", "data/v347/languages/*.json", "*.md", "newarch/*.md", "uol/*.md"]
