[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cemm"
version = "3.5.0"
description = "CEMM grounded multilingual cognitive semantic kernel"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cemm*"]
exclude = [
  "cemm.migration",
  "cemm.migration.*",
  "cemm.v350.migration",
  "cemm.v350.migration.*",
]

[tool.setuptools.package-data]
cemm = [
  "data/v350/*.json",
  "data/v350/*.jsonl",
  "data/v350/*/*.json",
  "data/v350/*/*.jsonl",
  "data/v350/*/*/*.json",
  "data/v350/*/*/*.jsonl",
  "data/v350/compiled/*",
  "data/v350/release/*",
  "*.md",
  "newarch/*.md",
  "uol/*.md",
]
